RESOLVED FIXED92289
Crash when calling PluginView::pluginFocusOrWindowFocusChanged when the web page is null
https://bugs.webkit.org/show_bug.cgi?id=92289
Summary Crash when calling PluginView::pluginFocusOrWindowFocusChanged when the web p...
Anders Carlsson
Reported 2012-07-25 13:31:58 PDT
Crash when calling PluginView::pluginFocusOrWindowFocusChanged when the web page is null
Attachments
Patch (2.43 KB, patch)
2012-07-25 13:34 PDT, Anders Carlsson
kling: review+
Anders Carlsson
Comment 1 2012-07-25 13:34:14 PDT
Anders Carlsson
Comment 2 2012-07-25 14:13:20 PDT
Note You need to log in before you can comment on or make changes to this bug.