Crash when calling PluginView::pluginFocusOrWindowFocusChanged when the web page is null https://bugs.webkit.org/show_bug.cgi?id=92289 <rdar://problem/11785352>

Reviewed by Andreas Kling.

Plug-in views that outlive their containing web page for various reasons (such as being protected from
destruction) need to null check the web page.

* WebProcess/Plugins/PluginView.cpp:
(WebKit::PluginView::pluginFocusOrWindowFocusChanged):
(WebKit::PluginView::setComplexTextInputState):

Canonical link: https://commits.webkit.org/110097@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123658 268f45cc-cd09-0410-ab3c-d52691b4dbfc